[tool.poetry]
name = "judges-nlp"
version = "0.1.0"
description = ""
authors = ["Tim Rickert <timrickert@squareup.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
